Starting 2nd Module in the Modular monolith, Order Service, Application support for Spring Data Jpa for persistence in order module, enabling dual data source for the orders db - enhancing docker composer file